tests/fixtures/invalid/list_bitxor_set.py
# Cannot bitwise XOR List[int] and Set[int]
x: list[int] = [1, 2, 3] ^ {1, 2, 3}
